# mates.rs

./: .travis.yml  Cargo.toml  README.md  README.rst  build.rs  build.rs.bak
src/: app.rs  cli.rs  lib.rs  main.rs
src/editor/: mod.rs
src/mates/: app.rs  cli.rs  item.rs  lib.rs  utils.rs
src/mates/editor/: mod.rs  widgets.rs
tests/: lib.rs
