[package]
name = "mates"
version = "0.3.0"
authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"
keywords = ["vdir", "vcard", "contacts", "addressbook"]
readme = "README.md"

description = "A very simple commandline addressbook"
documentation = "https://github.com/untitaker/mates.rs"
homepage = "https://github.com/untitaker/mates.rs"
repository = "https://github.com/untitaker/mates.rs"

[lib]
name = "mates"
path = "src/mates/lib.rs"

[[bin]]
name = "mates"
test = false
doc = false

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
atomicwrites = "0.2.5"
email = "0.0.20"
clap = "2.33.0"
vobject = "0.7"
cursive = "0.13"

[build-dependencies]
clap = "2.31"
