[package]
name = "mates"
version = "0.3.0"
authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"
keywords = ["vdir", "vcard", "contacts", "addressbook"]
readme = "README.md"

description = "A very simple commandline addressbook"
documentation = "https://github.com/untitaker/mates.rs"
homepage = "https://github.com/untitaker/mates.rs"
repository = "https://github.com/untitaker/mates.rs"

edition = "2018"

[dependencies]
uuid = { version = "0.5", features = ["v4"] }
atomicwrites = "0.1"
email = "0.0"
clap = "2.33.0"
vobject = "0.2"
cursive = "0.14"
anyhow = "1.0.26"

[build-dependencies]
clap = "2.31"
